--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="left-container">
     <div class="top-div">
       <!-- Top Div Content -->
+      <app-filter></app-filter>
     </div>
     <div class="main-left-div">
       <!-- Left Div Content (80% Height) -->
