users list component layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     </div>
     <div class="main-left-div">
       <!-- Left Div Content (80% Height) -->
+      <app-users-list></app-users-list>
     </div>
   </div>
   <div class="right-div">
