user details template binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
   </div>
   <div class="right-div">
     <!-- Right Div Content -->
-    <app-user-details></app-user-details>
+    <app-user-details [user]="userSelected"></app-user-details>
   </div>
 </div>
