--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,14 @@
     </div>
     <div class="main-left-div">
       <!-- Left Div Content (80% Height) -->
-      <app-users-list></app-users-list>
+      <app-users-list (userSelected)="onUserSelected($event)"></app-users-list>
     </div>
   </div>
   <div class="right-div">
     <!-- Right Div Content -->
-    <app-user-details [user]="userSelected"></app-user-details>
+    <app-user-details
+      [user]="userSelected"
+      *ngIf="showUserDetails"
+    ></app-user-details>
   </div>
 </div>
