--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
     </div>
     <div class="main-left-div">
       <!-- Left Div Content (80% Height) -->
-      <app-users-list (userSelected)="onUserSelected($event)"></app-users-list>
+      <app-users-list
+        [usersList]="usersList"
+        (userSelected)="onUserSelected($event)"
+      ></app-users-list>
     </div>
   </div>
   <div class="right-div">
