--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <div class="left-container">
     <div class="top-div">
       <!-- Top Div Content -->
-      <app-filter></app-filter>
+      <app-filter (onFilter)="onFilter($event)"></app-filter>
     </div>
     <div class="main-left-div">
       <!-- Left Div Content (80% Height) -->
       <app-users-list
-        [usersList]="usersList"
+        [usersList]="usersListFiltered"
         (userSelected)="onUserSelected($event)"
       ></app-users-list>
     </div>
