--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -47,6 +47,9 @@
       <button mat-raised-button color="primary" (click)="onFilter()">
         Filtrar
       </button>
+      <button mat-raised-button color="warn" (click)="resetFilter()">
+        Limpar
+      </button>
     </div>
   </div>
 </div>
